@@ -34,7 +34,7 @@ public class GoogleApi20 extends DefaultApi20 {
 
     @Override
     public String getAccessTokenEndpoint() {
-        return "https://accounts.google.com/o/oauth2/token";
+        return "https://www.googleapis.com/oauth2/v4/token";
     }
 
     @Override
