@@ -78,6 +78,42 @@ public class OAuth20Service extends OAuthService {
         return request;
     }
 
+    public final OAuth2AccessToken refreshAccessToken(String refreshToken) {
+        final Response response = createRefreshTokenRequest(refreshToken,
+                new OAuthRequest(api.getAccessTokenVerb(), api.getAccessTokenEndpoint(), this)).send();
+        return api.getAccessTokenExtractor().extract(response.getBody());
+    }
+
+    public final Future<OAuth2AccessToken> refreshAccessTokenAsync(String refreshToken,
+            OAuthAsyncRequestCallback<OAuth2AccessToken> callback) {
+        return refreshAccessTokenAsync(refreshToken, callback, null);
+    }
+
+    public final Future<OAuth2AccessToken> refreshAccessTokenAsync(String refreshToken,
+            OAuthAsyncRequestCallback<OAuth2AccessToken> callback, ProxyServer proxyServer) {
+        final OAuthRequestAsync request = createRefreshTokenRequest(refreshToken,
+                new OAuthRequestAsync(api.getAccessTokenVerb(), api.getAccessTokenEndpoint(), this));
+        return request.sendAsync(callback, new OAuthRequestAsync.ResponseConverter<OAuth2AccessToken>() {
+            @Override
+            public OAuth2AccessToken convert(com.ning.http.client.Response response) throws IOException {
+                return getApi().getAccessTokenExtractor()
+                        .extract(OAuthRequestAsync.RESPONSE_CONVERTER.convert(response).getBody());
+            }
+        }, proxyServer);
+    }
+
+    protected <T extends AbstractRequest> T createRefreshTokenRequest(String refreshToken, T request) {
+        if (refreshToken == null || refreshToken.isEmpty()) {
+            throw new IllegalArgumentException("The refreshToken cannot be null or empty");
+        }
+        final OAuthConfig config = getConfig();
+        request.addParameter(OAuthConstants.CLIENT_ID, config.getApiKey());
+        request.addParameter(OAuthConstants.CLIENT_SECRET, config.getApiSecret());
+        request.addParameter(OAuthConstants.REFRESH_TOKEN, refreshToken);
+        request.addParameter(OAuthConstants.GRANT_TYPE, OAuthConstants.REFRESH_TOKEN);
+        return request;
+    }
+
     /**
      * {@inheritDoc}
      */
